--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,40 +2,6 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "0.1.0",
-    "command": "make",
-    "isShellCommand": true,
-    "options": {
-        "cwd": "${workspaceRoot}/script/"
-    },
-    "tasks": [
-        {
-            "taskName": "html",
-            "args": [
-                "html"
-            ],
-            "isBuildCommand": true,
-            "showOutput": "silent",
-            "problemMatcher": {
-                "owner": "reStructuredText",
-                "fileLocation": ["relative", "${workspaceRoot}"],
-                "pattern": [
-                    {
-                        "regexp": "^(.*):(\\d+):(\\d+):\\s+(WARNING|ERROR|INFO):\\s+(.*)$",
-                        "file": 1,
-                        "line": 2,
-                        "column": 3,
-                        "severity": 4,
-                        "message": 5
-                    }
-                ]
-            }
-        },
-        {
-            "taskName": "pdf",
-            "args": [
-                "latexpdf"
-            ],
-            "showOutput": "silent"
-        }
-    ]
+    "command": "./Shakefile.hs",
+    "isShellCommand": true
 }
